tests/ui/suggestions/let-binding-init-expr-as-ty.stderr
error: expected type, found `42`
  --> $DIR/let-binding-init-expr-as-ty.rs:43:12
   |
LL |     let x: 42;
   |          - ^^ expected type
   |          |
   |          while parsing the type for `x`
   |
help: use `=` if you meant to assign
   |
LL -     let x: 42;
LL +     let x = 42;
   |

error: expected type, found `""`
  --> $DIR/let-binding-init-expr-as-ty.rs:44:12
   |
LL |     let x: "";
   |          - ^^ expected type
   |          |
   |          while parsing the type for `x`
   |
help: use `=` if you meant to assign
   |
LL -     let x: "";
LL +     let x = "";
   |

error[E0573]: expected type, found local variable `num`
  --> $DIR/let-binding-init-expr-as-ty.rs:3:27
   |
LL |     let foo: i32::from_be(num);
   |                           ^^^ not a type
   |
help: use `=` if you meant to assign
   |
LL -     let foo: i32::from_be(num);
LL +     let foo = i32::from_be(num);
   |

error[E0573]: expected type, found function `bar`
  --> $DIR/let-binding-init-expr-as-ty.rs:47:12
   |
LL |     let x: bar();
   |            ^^^^^ not a type
   |
help: use `=` if you meant to assign
   |
LL -     let x: bar();
LL +     let x = bar();
   |

error[E0573]: expected type, found function `bar`
  --> $DIR/let-binding-init-expr-as-ty.rs:48:12
   |
LL |     let x: bar;
   |            ^^^ not a type

error[E0573]: expected type, found local variable `x`
  --> $DIR/let-binding-init-expr-as-ty.rs:51:12
   |
LL | struct K(S::new(()));
   | --------------------- similarly named struct `K` defined here
...
LL |     let x: x;
   |            ^
   |
help: a struct with a similar name exists
   |
LL -     let x: x;
LL +     let x: K;
   |

error[E0658]: return type notation is experimental
  --> $DIR/let-binding-init-expr-as-ty.rs:27:18
   |
LL |     let x: S::new(..);
   |                  ^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = help: add `#![feature(return_type_notation)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: return type notation not allowed in this position yet
  --> $DIR/let-binding-init-expr-as-ty.rs:18:10
   |
LL | struct K(S::new(()));
   |          ^^^^^^^^^^
   |
help: furthermore, argument types not allowed with return type notation
   |
LL - struct K(S::new(()));
LL + struct K(S::new(..));
   |

error: expected type, found associated function call
  --> $DIR/let-binding-init-expr-as-ty.rs:3:14
   |
LL |     let foo: i32::from_be(num);
   |              ^^^^^^^^^^^^^^^^^
   |
help: use `=` if you meant to assign
   |
LL -     let foo: i32::from_be(num);
LL +     let foo = i32::from_be(num);
   |

error: expected type, found associated function call
  --> $DIR/let-binding-init-expr-as-ty.rs:25:12
   |
LL |     let x: Vec::new();
   |            ^^^^^^^^^^
   |
help: use `=` if you meant to assign
   |
LL -     let x: Vec::new();
LL +     let x = Vec::new();
   |

error: expected type, found associated function call
  --> $DIR/let-binding-init-expr-as-ty.rs:26:12
   |
LL |     let x: Vec<()>::new();
   |            ^^^^^^^^^^^^^^
   |
help: use `=` if you meant to assign
   |
LL -     let x: Vec<()>::new();
LL +     let x = Vec<()>::new();
   |

error: expected type, found associated function call
  --> $DIR/let-binding-init-expr-as-ty.rs:27:12
   |
LL |     let x: S::new(..);
   |            ^^^^^^^^^^
   |
help: use `=` if you meant to assign
   |
LL -     let x: S::new(..);
LL +     let x = S::new(..);
   |

error: expected type, found associated function call
  --> $DIR/let-binding-init-expr-as-ty.rs:29:12
   |
LL |     let x: S::new(());
   |            ^^^^^^^^^^
   |
help: use `=` if you meant to assign
   |
LL -     let x: S::new(());
LL +     let x = S::new(());
   |

error: expected type, found associated function call
  --> $DIR/let-binding-init-expr-as-ty.rs:32:12
   |
LL |     let x: vec![];
   |            ^^^^^^
   |
help: use `=` if you meant to assign
   |
LL -     let x: vec![];
LL +     let x = vec![];
   |

error: expected type, found associated function call
  --> $DIR/let-binding-init-expr-as-ty.rs:37:23
   |
LL |             let $pat: Vec::new();
   |                       ^^^^^^^^^^
...
LL |     make!(_);
   |     -------- in this macro invocation
   |
   = note: this error originates in the macro `make` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 15 previous errors

Some errors have detailed explanations: E0573, E0658.
For more information about an error, try `rustc --explain E0573`.
